# marvel-comics

./: .dockerignore  .gitignore  Dockerfile  README.md  build_reading_list.py  fly.toml  pyproject.toml
data/: hickman_full.md  hickman_minimal.md
lists/: hickman_secret_wars_full.json  hickman_secret_wars_minimal.json
src/marvel_metadata/: __init__.py  config.py  logging.py
src/marvel_metadata/api/: __init__.py  app.py  deps.py  middleware.py
src/marvel_metadata/api/models/: __init__.py  common.py  creator.py  issue.py  series.py
src/marvel_metadata/api/templates/: docs.html
src/marvel_metadata/api/v1/: creators.py  health.py  issues.py  router.py  search.py  series.py
src/marvel_metadata/cli/: __init__.py  list_build.py  main.py  normalize.py  parse.py  serve.py
src/marvel_metadata/core/: __init__.py  decoder.py  normalizer.py  types.py
src/marvel_metadata/data/: __init__.py  repository.py  schema.py  search.py
src/marvel_metadata/data/migrations/: __init__.py  v001_initial.sql
src/marvel_metadata/io/: __init__.py  jsonl.py
src/marvel_metadata/reading_list/: __init__.py  formatters.py  matcher.py  parser.py
tests/: __init__.py  conftest.py
tests/unit/: test_decoder.py  test_normalizer.py
