[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marvel-metadata"
version = "1.0.0"
description = "Unofficial Marvel Unlimited metadata API and tools"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "emreparker" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Database",
]
keywords = ["marvel", "comics", "metadata", "api", "marvel-unlimited"]

dependencies = [
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
marvel-metadata = "marvel_metadata.cli.main:app"

[project.urls]
Homepage = "https://github.com/emreparker/marvel-metadata"
Documentation = "https://github.com/emreparker/marvel-metadata#readme"
Repository = "https://github.com/emreparker/marvel-metadata"
Issues = "https://github.com/emreparker/marvel-metadata/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/marvel_metadata"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["marvel_metadata"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
disable_error_code = ["no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=marvel_metadata --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/marvel_metadata"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
